--- a/FRONTEND_TALLER_3/package.json
+++ b/FRONTEND_TALLER_3/package.json
@@ -16,6 +16,7 @@
     "@capacitor/ios": "^5.4.1",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@headlessui/vue": "^1.7.16",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.5.1",
